# vex

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  agent.py  agent_fast_actions.py  agent_trace.py  asset_registry.py  broll_intelligence.py  color_grading.py  color_grading_evaluator.py  config.py  content_cache.py  creative_intelligence.py  creative_qa.py  edit_plan.py  encode_planner.py  encode_validator.py  engine.py  evaluation_harness.py  how-it-works.md  intent_compiler.py  job_runner.py  main.py  nle_interop.py  package-lock.json  package.json  plan_store.py  plugin_api.py  prompts.py  pyproject.toml  requirements.txt  sources.py  state.py  timeline.py  visual_copy_contract.py  visual_explanation.py  (+4 more)
.github/: dependabot.yml  release.yml
.github/workflows/: ci.yml  release.yml
docs/: add-song-music-director.md  architecture-upgrades.md  auto-visuals-skill-graph.md  compatibility.md  creative-direction-harness.md  creative-quality-architecture-report.md  feedback-driven-automation-report.md  hyperframes-visual-cegis.md  hyperframes-visual-proof-search.md  hyperframes-visual-world-compiler.md  installing.md  local-llms.md  open-visual-program.md  release-architecture-report.md  releasing.md  remotion-auto-visuals-architecture.md  renderers.md  smartie.md  video-generation-skill-graph.md  visual-copy-contract.md  visual-director-v2.md
effects/: __init__.py  compiler.py  context.py  motion.py  normalizer.py  planner.py  presets.py  preview.py  qa.py  schema.py  signals.py
presets/: __init__.py
providers/: __init__.py  base.py  claude_provider.py  gateway.py  gemini_provider.py  openai_compatible_provider.py
renderers/: __init__.py  base.py  blender_renderer.py  blender_spec.py  ffmpeg_renderer.py  hyperframes_renderer.py  manim_renderer.py  remotion_entry.jsx  remotion_renderer.py  remotion_runner.mjs
scripts/: release_checks.py
shorts/: __init__.py  director.py  qa.py  story_compiler.py
skills/vex-hyperframes-director/: SKILL.md
skills/vex-hyperframes-director/agents/: openai.yaml
skills/vex-hyperframes-director/references/: blueprints.md  contracts.md  examples.md  motion-and-layout.md  qa-and-repair.md
skills/vex-hyperframes-visual-repair/: SKILL.md
skills/vex-hyperframes-visual-repair/agents/: openai.yaml
skills/vex-hyperframes-visual-repair/references/: counterexamples.md  patch-dsl.md  release-gate.md
smartie/: __init__.py  planner.py  qa.py  schema.py
subtitles/: __init__.py  ass.py  styles.py
tests/: test_add_song.py  test_agent_fast_actions.py  test_architecture_primitives.py  test_auto_effects.py  test_auto_shorts.py  test_auto_visuals_director.py  test_auto_visuals_semantic_compiler.py  test_auto_visuals_skill_graph.py  test_automation_paths.py  test_blender_renderer.py  test_broll_providers.py  test_cli_project_loading.py  test_cli_ui.py  test_color_grading.py  test_color_grading_evaluator.py  test_composite_qa.py  test_config_and_visual_ir.py  test_config_hardening.py  test_creative_intelligence.py  test_creative_optimizer.py  test_creative_qa.py  test_creative_registry.py  test_encode_planner.py  test_encode_tool.py  test_encode_validator.py  test_engine_hardening.py  test_evaluation_harness.py  test_export_resilience.py  test_external_media_hardening.py  test_frame_sampling.py  test_hyperframes_adaptive_motion_qa.py  test_hyperframes_bespoke_authoring.py  test_hyperframes_claim_graph.py  test_hyperframes_critics.py  test_hyperframes_design.py  test_hyperframes_inverse_decoder.py  test_hyperframes_patches.py  test_hyperframes_proof_programs.py  test_hyperframes_qa.py  test_hyperframes_renderer.py  (+53 more)
tests/fixtures/: hyperframes_semantic_cases.json
tools/: __init__.py  audio.py  auto_effects.py  auto_shorts.py  auto_visuals.py  automation.py  color_grade.py  composite_qa.py  contracts.py  creative_optimizer.py  creative_qa.py  creative_registry.py  encode.py  export.py  import_smartie.py  merge.py  overlay.py  path_security.py  pexels_broll.py  promotion.py  renderer_diagnostics.py  silence.py  song.py  song_director.py  speed.py  subtitles.py  summarize.py  transcript.py  transcript_utils.py  transitions.py  trim.py  undo.py  upscale.py  video_generation.py  visual_asset.py
vex_hyperframes/: __init__.py  authoring.py  blueprints.py  capture.py  claim_graph.py  compiler.py  composer.py  counterexamples.py  critics.py  design.py  evaluation.py  final_judge.py  inverse_decoder.py  open_visual_runtime.py  patches.py  production_contract.py  proof_program.py  qa.py  repair_loop.py  safety.py  scene_program.py  semantic_qa.py  skill_pack.py  storyboard.py  validator.py  variants.py  vision_qa.py  visual_world.py  visual_world_renderer.py
vex_manim/: __init__.py  blueprint.py  briefs.py  director.py  layout.py  layout_qa.py  premium_fallback.py  production_contract.py  qa.py  runtime.py  scene_library.py  skill_pack.py  validator.py  visual_ir.py
vex_remotion/: __init__.py  compiler.py  qa.py
vex_runtime/: __init__.py  configuration.py  hyperframes.py  imaging.py  locking.py  paths.py  processes.py  transcription.py  whisper_worker.py
vex_runtime/resources/: __init__.py
vex_runtime/resources/config/: .env.example  __init__.py
vex_runtime/resources/hyperframes/: __init__.py  package-lock.json  package.json
vex_visuals/: __init__.py  aesthetic_critic.py  communication_contract.py  concept_search.py  creative_direction.py  director.py  frame_sampling.py  generative_authoring.py  open_visual_program.py  open_visual_program.schema.json  portfolio.py  repair.py  temporal_proof.py  verifier.py
video_generation/: __init__.py  beat_graph.py  beat_tournament.py  cinematographer.py  director.py  hyperframes_project.py  models.py  motion.py  pipeline.py  portfolio_judge.py  qa.py  renderer.py  script_planner.py  skill_graph.py
